taskapi-gitops/infrastructure/istio/alertmanager-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/platform-gateway
  http:
    - match:
        - uri:
            prefix: /alertmanager
      route:
        - destination:
            host: kube-prometheus-stack-alertmanager.monitoring.svc.cluster.local
            port:
              number: 9093
