taskapi-gitops/infrastructure/istio/argocd-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/platform-gateway
  http:
    - match:
        - uri:
            prefix: /argocd
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
