taskapi-gitops/infrastructure/istio/prometheus-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/platform-gateway
  http:
    - match:
        - uri:
            prefix: /prometheus
      route:
        - destination:
            host: kube-prometheus-stack-prometheus.monitoring.svc.cluster.local
            port:
              number: 9090
