taskapi-gitops/infrastructure/istio/vault-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vault
  namespace: vault
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/platform-gateway
  http:
    - match:
        - uri:
            prefix: /vault
      rewrite:
        uri: /
      route:
        - destination:
            host: vault.vault.svc.cluster.local
            port:
              number: 8200
    - match:
        - uri:
            prefix: /ui
      route:
        - destination:
            host: vault.vault.svc.cluster.local
            port:
              number: 8200
    - match:
        - uri:
            prefix: /v1
      route:
        - destination:
            host: vault.vault.svc.cluster.local
            port:
              number: 8200
